--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
   list-style: none;
   text-decoration: none;
   font-family: "Inter , sans-serif";
+  color: var(--color_heading);
 }
 
 :root {
@@ -18,7 +19,9 @@
   --border_color: #e5e5e5d5;
   --Sale_color: #e51a1a;
 }
-
+body{
+    padding-top: 180px;
+}
 span{
     color: var(--main_color);
 }
@@ -51,6 +54,9 @@ input,select,button{
     display: flex;
     align-items: center;
     transition: 0.3s;
+}
+.btn i{
+color: var(--white_color);
 }
 .btn:hover{
     scale:1.1 ;
@@ -207,6 +213,37 @@ header .bottom_header .category_nav .category_btn p{
 header .bottom_header .category_nav .category_btn i{
     color: var(--white_color);
 }
+header .bottom_header .category_nav .category_nav_list{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    border: 1px solid #999; 
+    border-top: 0;
+    display: flex;
+    flex-direction: column;
+    clip-path:polygon(0 0 , 100% 0 , 100% 0 , 0 0);
+    transition: 0.3s ease-in-out;
+}
+
+header .bottom_header .category_nav .category_nav_list.active{
+    clip-path: polygon(0 0 ,100% 0 ,100% 100% , 0 100%);
+}
+
+header .bottom_header .category_nav .category_nav_list a{
+    padding: 14px 10px;
+    border-bottom: 1px solid var(--border_color);
+    font-size: 14px;
+}
+
+header .bottom_header .category_nav .category_nav_list a:last-child{
+    border-bottom: 0;
+}
+header .bottom_header .category_nav .category_nav_list a:hover{
+    background-color: #d0d0d0;
+}
+
+
 header .bottom_header .nav_links{
     display: flex;
     gap: 35px;
@@ -222,3 +259,6 @@ header .bottom_header .nav_links li.active a
 {
     color: var(--main_color);
 }
+
+
+/*---------Slider----------*/
