--- a/CSS/style.css
+++ b/CSS/style.css
@@ -591,4 +591,112 @@ background-color:transparent;
     font-size: 24px;
     cursor: pointer;
   }
-  
+
+  /*====banners4======*/
+
+
+.banners{
+    margin: 50px 0;
+    justify-content: space-between;
+}
+
+
+.banners .banners_boxs .box img{
+    width: 49%;
+}
+
+.banners .banners_boxs.banner_3_img .box img{
+    width: 32.6%;
+}
+
+/*==============Footer==========*/
+
+footer{
+  background-color: var(--color_heading);
+}
+
+footer .container{
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 0;
+}
+footer .container .big_row {
+  width: 30%;
+}
+
+footer .container .big_row .logo_footer{
+  width: 180px;
+}
+
+footer .container .big_row p{
+  width: 90%;
+  columns: #b1b1b1;
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 15px 0;
+}
+
+footer .container .row{
+  width: 22%;
+} 
+.icons_footer{
+  display: flex;
+  gap: 10px ;
+}
+footer .container .big_row .icons_footer a{
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  position: relative;
+  top: 0;
+  transition: 0.3s;
+  background: var(--main_color);
+}
+
+footer .container .big_row .icons_footer a:hover{
+  top: -5px;
+}
+footer .container .big_row .icons_footer a i{
+  color: var(--white_color);
+  font-size: 20px;
+}
+footer .container .row h4{
+  color: var(--white_color);
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+footer .container .row .links{
+  display: flex;
+  flex-direction:column;
+  gap: 7px;
+}
+
+footer .container .row .links a{
+  color:#b1b1b1 ;
+  font-size: 14px;
+  position: relative;
+  left: 0;
+  transition: 0.3s;
+}
+footer .container .row .links a i{
+  color: var(--main_color);
+  font-size: 14px;
+  margin-right: 5px;
+}
+
+footer .container .row .links a:hover{
+  left: 8px;
+  color: var(--main_color);
+}
+
+footer .bottom_footer{
+  background: #1d1f22;
+}
+footer .bottom_footer .container{
+  align-items: center;
+  padding: 5px 0;
+}
