--- a/CSS/productStyle.css
+++ b/CSS/productStyle.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+body, * {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+}
+
 .product-detail-card {
     display: flex;
     gap: 30px;
