--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 * {
   padding: 0;
@@ -6,7 +7,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: "Inter , sans-serif";
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   color: var(--color_heading);
 }
 
@@ -21,6 +22,7 @@
 }
 body{
     padding-top: 180px;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 span{
     color: var(--main_color);
@@ -724,4 +726,9 @@ footer .bottom_footer .container{
 
 html {
   scroll-behavior: smooth;
+}
+
+[class^="fa-"], [class*=" fa-"] {
+  font-family: 'Font Awesome 6 Free', 'Font Awesome 5 Free', 'FontAwesome', Arial, Helvetica, sans-serif !important;
+  font-weight: 900;
 }
